# toy-edm

./: README.md  pyproject.toml  setup.sh
docs/: key_physics.tex
run/: run.ipynb  run.py
src/core/: parameters.py  simulate.py
src/utils/: edm.mplstyle  plotting.py
